# hermespy-rt

./: .gitignore  CMakeLists.txt  GNUmakefile  Makefile  __init__.py  common.h  compute_paths.c  compute_paths.h  compute_paths_pybind11.cpp  py_compute_paths.c  scene.h  scene_fromSionna.c  scene_fromSionna.elf  setup.py  test.c  test.py  viz_ray_bin.py  vizrays.c
inc/: common.h  compute_paths.h  materials.h  ray.h  scene.h  test.h  vec3.h  viz.h
scenes/: 2cars.hrt  box.hrt  simple_reflector.hrt  simple_street_canyon_with_cars.hrt
script/: create_material_bin.c  create_ply.c  material.h
src/: compute_paths.c  materials.c  scene.c  scene_fromSionna.c  vizrays.c
test/: 2cars.c  test.c  test.py
viz/: viz.h  vizrays.c
